--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://DB_USER:DB_PASSWORD@db:5432/DB_NAME
+DATABASE_URL=postgresql://DB_USER:DB_PASSWORD@DB_ADDRESS:5432/DB_NAME
 SECRET_KEY=your_secret_key_here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
