--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -20,6 +20,27 @@ services:
     networks:
       - cb_lab_network
 
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: cb_lab_backend
+    environment:
+      DATABASE_URL: postgresql://DB_USER:DB_PASSWORD@postgres:5432/DB_NAME
+      SECRET_KEY: SECRET_KEY
+      ALGORITHM: HS256
+      ACCESS_TOKEN_EXPIRE_MINUTES: 30
+    ports:
+      - "8000:8000"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    volumes:
+      - ./backend:/app
+    command: fastapi dev app/main.py --host 0.0.0.0 --port 8000
+    networks:
+      - cb_lab_network
+
 volumes:
   postgres_data:
     driver: local
