Adiciona a funcionalidade de criação de superusuário na execução do docker compose.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,23 +2,28 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-# Install system dependencies
+# Instala dependências de sistema
 RUN apt-get update && apt-get install -y \
     gcc \
     postgresql-client \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements
+# Copia requirements.txt
 COPY requirements.txt .
 
-# Install Python dependencies
+# Instala dependencias Python
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
+# Copia código da aplicação
 COPY . .
 
-# Expose port
+# Copia entrypoint e o torna executável
+COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
+# Expõe porta
 EXPOSE 8000
 
-# Run the application
+# Entrypoint aguarda o banco de dados, cria o superusuário e executa o CMD
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 CMD ["fastapi", "dev", "app/main.py", "--host", "0.0.0.0"]
