--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,8 @@
-DATABASE_URL=postgresql://DB_USER:DB_PASSWORD@DB_ADDRESS:5432/DB_NAME
+DATABASE_USER=DB_USER
+DATABASE_PASSWORD=DB_PASSWORD
+DATABASE_NAME=DB_NAME
+DATABASE_HOST=DB_HOST
+DATABASE_PORT=DB_PORT
 SECRET_KEY=your_secret_key_here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
