--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,24 @@
+
+# -----------------------------
+# General
+# -----------------------------
+.DS_Store
+Thumbs.db
+desktop.ini
+/.history
+
+# -----------------------------
 # Python
+# -----------------------------
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
 build/
-develop-eggs/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
 pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
-.installed.cfg
 *.egg
 MANIFEST
 
@@ -27,48 +26,117 @@ MANIFEST
 venv/
 ENV/
 env/
-.venv
+.venv/
+venv.bak/
 
-# General Configurations
-docker-compose.yml
+# Packaging
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.DS_Store
-*.sublime-project
-*.sublime-workspace
-
-# Environment variables
+# -----------------------------
+# Environment files
+# -----------------------------
 .env
-.env.local
-.env.*.local
+.env.*
 
-# Database
+# -----------------------------
+# Databases
+# -----------------------------
 *.db
 *.sqlite
 *.sqlite3
 
-# Testing
+# -----------------------------
+# Testing / Coverage
+# -----------------------------
 .pytest_cache/
 .coverage
 htmlcov/
 .tox/
 .hypothesis/
 
-# Poetry
-poetry.lock
-
-# Node (for frontend)
+# -----------------------------
+# Node / Frontend
+# -----------------------------
 node_modules/
-npm-debug.log
-yarn-error.log
-dist/
-build/
+/frontend/node_modules/
+/frontend/dist/
+/frontend/build/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# OS
-.DS_Store
+# Angular cache
+/frontend/.angular/cache/
+
+# Build output
+/dist/
+/build/
+/out-tsc/
+
+# -----------------------------
+# IDEs / Editors
+# -----------------------------
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+*.code-workspace
+*.swp
+*.swo
+*~
+
+# Keep recommended VS Code workspace files
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# -----------------------------
+# Docker
+# -----------------------------
+/docker-compose.override.yml
+.docker-compose.*.yml
+docker-compose.*.override.yml
+docker-compose.yml
+Dockerfile*
+
+# -----------------------------
+# Logs
+# -----------------------------
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+
+# -----------------------------
+# Misc / OS
+# -----------------------------
 Thumbs.db
+ehthumbs.db
+Icon?
+
+# -----------------------------
+# Miscellaneous caches
+# -----------------------------
+.cache/
+.parcel-cache/
+.cache-loader/
+.next/
+.turbo/
+
+# -----------------------------
+# Tooling
+# -----------------------------
+.pytest_cache/
+.ruff_cache/
+.mypy_cache/
+.venv/
+.serverless/
+
