--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,10 +2,24 @@ server {
   listen       80;
   server_name  localhost;
 
+  # Serve Angular app
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html;
+  }
+
+  # Proxy API calls to backend service
+  location /api/ {
+    proxy_pass http://cb_lab_backend:8000/;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_cache_bypass $http_upgrade;
   }
 
   error_page   500 502 503 504  /50x.html;
